buildscript {
    ext {
        springBootVersion = '2.1.6.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}",
                'com.bmuschko:gradle-docker-plugin:4.9.0')
    }
}

plugins {
    id 'org.springframework.boot' version '2.1.6.RELEASE'
    id 'com.avast.gradle.docker-compose' version '0.9.4'
    id 'java'
}

configurations {
    bootJar.archiveName = "${project.name}.jar"
}

apply from: 'version/version.gradle'
apply from: 'docker/docker.gradle'

apply plugin: 'io.spring.dependency-management'
apply plugin: 'org.springframework.boot'

group = 'ru.zagamaza'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.coveo:feign-error-decoder:1.3.1'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.2.RELEASE'
    implementation 'org.telegram:telegrambots-spring-boot-starter:4.3.1'
    implementation 'com.google.code.gson:gson:2.8.2'
    implementation 'com.vdurmont:emoji-java:4.0.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
}
